# libmu

./: LICENSE  README.md  meson.build  test.vala  valnum.vala
src/: array.vala  index.vala  ops.vala  ops_math.vala  shape.vala  utils.vala
src/tinyndarray/: broadcast.vala  concat.vala  dot.vala  parallel.vala  reduce.vala  replacements  slice.vala  source  tinyndarray.vala
